--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "axios": "^1.11.0",
     "linkedom": "^0.18.11",
     "react": "19.1.0",
-    "react-native": "0.80.2"
+    "react-native": "0.80.2",
+    "react-native-cheerio": "^1.0.0-rc.4",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-orientation-locker": "^1.7.0",
+    "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -29,7 +33,7 @@
     "@react-native/metro-config": "0.80.2",
     "@react-native/typescript-config": "0.80.2",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.1.0",
+    "@types/react": "^19.1.12",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
